[package]
name = "raven_bvh"
version = "0.2.0"
edition = "2024"
exclude = ["assets"]

[workspace]
exclude = ["benches"]

[lib]
crate-type = ["lib"] 
# This is here based on https://github.com/bheisler/criterion.rs/issues/193
# had issues saving baselines
#bench = false

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[features]
default = []
camera = []
trace = []
save = [] # to test benchmark output

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy =  { version = "0.16" }
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
#bevy-inspector-egui = { version = "0.11.0", features = [""] }


[dev-dependencies]
bevy = "0.16"
avian3d = "0.3"
bevy_enhanced_input = "0.11"
sly_editor = { git = "https://github.com/slyedoc/sly_editor.git", features = []}
#sly_editor = { path = "../sly_editor", features = [""]}
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9"
rand_chacha = "0.9"
#sly_camera_controller = { git = "https://github.com/slyedoc/sly_camera_controller", branch = "main" }
#tracing = "0.1.34"
criterion = { version = "0.6", features = ["html_reports"] }
image = "0.25"


[[bench]]
name = "bvh"
required-features = ["camera"]
harness = false


[[example]]
name = "main"
required-features = ["camera"]

[[example]]
name = "sponza"
required-features = ["camera"]

[[example]]
name = "clock_tower"
required-features = ["camera"]

[[example]]
name = "minimal"
required-features = ["camera"]
